47: Add module-info to TCK
Task-Url: https://github.com/unitsofmeasurement/unit-tck/issues/47